GEODE-10533: Fix Deprecated APIs in geode-gfsh Module (#8000)
* GEODE-10533: Fix Deprecated APIs in geode-gfsh Module

* GEODE-10533: Fix Deprecated APIs in geode-gfsh Module

* GEODE-10533: Fix Deprecated APIs in geode-gfsh Module

* GEODE-10533: Fix Deprecated APIs in geode-gfsh Module

* GEODE-10533: Fix Deprecated APIs in geode-gfsh Module

---------

Co-authored-by: VENTSISLAV MARINOV <ventsislav.marinov@sas.com>